--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -7,7 +7,7 @@ WORKDIR /app
 
 COPY go.mod go.sum ./
 
-RUN go mode download
+RUN go mod download
 
 # Copy the source from the current directory to the working dir inside docker container
 COPY . .
