--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,79 +10,79 @@ services:
     volumes:
       - api:/usr/src/app/
     depends_on:
-      - go-blog-postgres # postgres.
-      # - go-blog-mysql # mysql.
+      # - go-blog-postgres # postgres.
+      - go-blog-mysql # mysql.
     networks:
       - go-blog
 
   # !MySQL
-  # go-blog-mysql:
-  #   image: mysql:5.7
-  #   container_name: go_blog_db_mysql
-  #   ports:
-  #     - 3306:3306
-  #   environment:
-  #     - MYSQL_ROOT_HOST=${DB_HOST}
-  #     - MYSQL_USER=${DB_USER}
-  #     - MYSQL_PASSWORD=${DB_PASSWORD}
-  #     - MYSQL_DATABASE=${DB_NAME}
-  #     - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
-  #   volumes:
-  #     - database_mysql:/var/lib/mysql
-  #   networks:
-  #     - go-blog
+  go-blog-mysql:
+    image: mysql:5.7
+    container_name: go_blog_db_mysql
+    ports:
+      - 3306:3306
+    environment:
+      - MYSQL_ROOT_HOST=${DB_HOST}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    volumes:
+      - database_mysql:/var/lib/mysql
+    networks:
+      - go-blog
 
   # !MySQL Admin Tools
-  # phpmyadmin:
-  #   image: phpmyadmin/phpmyadmin
-  #   container_name: phpmyadmin_container
-  #   depends_on:
-  #     - go-blog-mysql
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin_container
+    depends_on:
+      - go-blog-mysql
+    environment:
+      - PMA_HOST=go-blog-mysql # Note the "mysql". Must be the name of the what you used as the mysql service.
+      - PMA_USER=${DB_USER}
+      - PMA_PORT=${DB_PORT}
+      - PMA_PASSWORD=${DB_PASSWORD}
+    ports:
+      - 9090:80
+    restart: always
+    networks:
+      - go-blog
+
+  # # !postgreSQL
+  # go-blog-postgres:
+  #   image: postgres:latest
+  #   container_name: go_blog_db_postgres
   #   environment:
-  #     - PMA_HOST=go-blog-mysql # Note the "mysql". Must be the name of the what you used as the mysql service.
-  #     - PMA_USER=${DB_USER}
-  #     - PMA_PORT=${DB_PORT}
-  #     - PMA_PASSWORD=${DB_PASSWORD}
+  #     - POSTGRES_USER=${DB_USER}
+  #     - POSTGRES_PASSWORD=${DB_PASSWORD}
+  #     - POSTGRES_DB=${DB_NAME}
+  #     - DATABASE_HOST=${DB_HOST}
   #   ports:
-  #     - 9090:80
-  #   restart: always
+  #     - '5432:5432'
+  #   volumes:
+  #     - database_postgres:/var/lib/postgresql/data
   #   networks:
   #     - go-blog
-
-  # !postgreSQL
-  go-blog-postgres:
-    image: postgres:latest
-    container_name: go_blog_db_postgres
-    environment:
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
-    ports:
-      - '5432:5432'
-    volumes:
-      - database_postgres:/var/lib/postgresql/data
-    networks:
-      - go-blog
-  # !postgreSQL Admin Tools
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: pgadmin_container
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    depends_on:
-      - go-blog-postgres
-    ports:
-      - '5050:80'
-    networks:
-      - go-blog
-    restart: unless-stopped
+  # # !postgreSQL Admin Tools
+  # pgadmin:
+  #   image: dpage/pgadmin4
+  #   container_name: pgadmin_container
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+  #   depends_on:
+  #     - go-blog-postgres
+  #   ports:
+  #     - '5050:80'
+  #   networks:
+  #     - go-blog
+  #   restart: unless-stopped
 
 volumes:
   api:
-  # database_mysql: #  mysql.
-  database_postgres: #  postgres.
+  database_mysql: #  mysql.
+  # database_postgres: #  postgres.
 
 # Networks to be created to facilitate communication between containers
 networks:
