--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -20,6 +20,7 @@ services:
     ports:
       - 3333:3306
     environment:
+      - ENVIRONMENT=tests
       - MYSQL_DATABASE=${TEST_DB_NAME}
       - MYSQL_USER=${TEST_DB_USER}
       - MYSQL_PASSWORD=${TEST_DB_PASSWORD}
