--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - 3306:3306
     environment:
-      - MYSQL_ROOT_HOST=${DB_HOST}
+      - MYSQL_ROOT_HOST=${DDB_HOST}
       - MYSQL_USER=${DB_USER}
       - MYSQL_PASSWORD=${DB_PASSWORD}
       - MYSQL_DATABASE=${DB_NAME}
